# scraper-audit

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  entrypoint.sh  main.py  pyproject.toml  schema.yaml  sqlmesh_runner.py  sqlmesh_tasks.py  utils.py
.github/workflows/: docker.yaml  docker.yml
audits/: bill.sql  event.sql  scraper_bills.sql  scraper_events.sql  vote_event.sql
models/: bill.sql  event.sql  scraper_bill.sql  scraper_bills.sql  scraper_event.sql  scraper_events.sql  vote_event.sql
