[tool.poetry]
name = "scraper-audit"
version = "0.1.0"
description = "Runs non-blocking audits on scraper outputs"
authors = ["Alex Obaseki <alex@pluralpolicy.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlmesh = "^0.176.0"
duckdb = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
